--- a/index.html
+++ b/index.html
@@ -4,18 +4,14 @@
   <meta charset="UTF-8" />
   <title>Redirecting…</title>
 
-  <!-- Fast redirect -->
   <meta http-equiv="refresh"
-        content="0.2; url=https://choose.creditcard/guides/apr?utm_source=apr.creditcard&utm_medium=redirect&utm_campaign=creditcard_collection">
+        content="0.2; url=https://choose.creditcard/?utm_source=apr.creditcard&utm_medium=redirect&utm_campaign=creditcard_collection">
 
-  <!-- Canonical to target -->
   <link rel="canonical"
-        href="https://choose.creditcard/guides/apr?utm_source=apr.creditcard&utm_medium=redirect&utm_campaign=creditcard_collection" />
+        href="https://choose.creditcard/?utm_source=apr.creditcard&utm_medium=redirect&utm_campaign=creditcard_collection" />
 
-  <!-- Prevent indexing of redirect page -->
   <meta name="robots" content="noindex,follow" />
 
-  <!-- GA4 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FE63JQ3H"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -27,7 +23,6 @@
     });
   </script>
 
-  <!-- Dark background (no flash) -->
   <style>
     html, body {
       background: #020617;
@@ -37,6 +32,5 @@
     }
   </style>
 </head>
-<body>
-</body>
+<body></body>
 </html>
